fix whitespace width

--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -28,7 +28,7 @@
   height: 15px;
   width: 15px;
   vertical-align: text-top;
-  margin-right: 0.316em;
+  margin-right: 0.333em;
   background: url(../../images/icons/error.svg) no-repeat;
 }
 
@@ -264,7 +264,7 @@ textarea.form-textarea {
 
 /* Fix spacing after removing spaces in container.html.twig. */
 .container-inline .form-type-date:last-child {
-  margin-left: 0.632em; // Emulate 2 whitespaces
+  margin-left: 0.666em; // Emulate 2 whitespaces
 }
 
 .form-item .file-size {
