--- a/sass/content-form-theme.scss
+++ b/sass/content-form-theme.scss
@@ -160,7 +160,7 @@
   .entity-meta__last-saved,
   .entity-meta__author {
     label {
-      margin-right: 0.316em; // Emulate whitespace.
+      margin-right: 0.333em; // Emulate whitespace.
     }
   }
 
